# ibkr-rust

./: .env  .pre-commit-config.yaml  Cargo.toml  flake.nix  rust-toolchain.toml  tags
api/: Cargo.toml
api/src/: account.rs  account_summary_tags.rs  api_message.rs  bars.rs  blocking_client.rs  client.rs  contract.rs  enums.rs  frame.rs  ib_frame.rs  lib.rs  order.rs  parse.rs  reader.rs  shutdown.rs  ticker.rs  writer.rs
api/src/client/: account.rs  contract_details.rs  executions.rs  market_data.rs  orders.rs
api/src/cmd/: api.rs  mod.rs  place_order.rs  request_account_summary.rs  request_account_updates.rs  request_contract_details.rs  request_executions.rs  request_market_data.rs  request_orders.rs
api/src/utils/: dateparser.rs  mod.rs
api/tests/: mod.rs
api/tests/all/: integration_tests.rs  market_data.rs  mod.rs
devshell/: cargo-ext.nix  container.nix  default.nix  format.nix  package.nix
examples/: simple.rs
flex/: Cargo.toml  rustfmt.toml
flex/src/: config.rs  enums.rs  flex_statement.rs  lib.rs  main.rs  utils.rs
flex/src/flex_statement/: CFDCharge.rs  CFDCharges.rs  CashTransaction.rs  ChangeInDividendAccrual.rs  ChangeInDividendAccruals.rs  ComplexPosition.rs  ComplexPositions.rs  OpenDividendAccrual.rs  OpenDividendAccruals.rs  OptionEAE.rs  OptionEAEs.rs  Options.rs  PriorPeriodPosition.rs  PriorPeriodPositions.rs  SLBActivities.rs  SLBActivity.rs  SLBFee.rs  SLBFees.rs  SecuritiesInfo.rs  SecurityInfo.rs  TierInterestDetail.rs  TierInterestDetails.rs  TransactionTaxes.rs  _mod.rs  account_information.rs  cash_transactions.rs  constants.rs  contract.rs  conversion_rate.rs  conversion_rates.rs  corporate_actions.rs  enums.rs  equity_summary_by_report_date_in_base.rs  equity_summary_in_base.rs  interest_accruals.rs  interest_accruals_currency.rs  open_position.rs  open_positions.rs  order.rs  stmt_funds.rs  (+6 more)
