[package]
name = "ibkr-rust-flex"
version = "0.1.0"
authors = ["Christian Czichy <christian@czichy.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
iso_currency = { version = "0.4.0", features = ["with-serde"] }
log = "0.4.14"
quick-xml = { version = "0.22", features = [ "serialize" ] }
reqwest = { version = "0.11", features = ["stream"] }
rust_decimal = { version = "1.22", features = [ "serde-str" ] }
rust_decimal_macros = "1.22"
serde = { version = "1.0", features = [ "derive" ] }
structopt="0.3"
tokio = { version = "1.17", features = ["full"] }
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.3.7", default-features = false, features = ["registry","fmt","env-filter"] }

[dev-dependencies]
pretty_assertions = "1.1.0"
ctor = "0.1.21"
