[package]
name = "ibkr-rust-flex"
version = "0.1.0"
authors = ["Christian Czichy <christian@czichy.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
iso_currency.workspace = true
log.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
structopt.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions = "1.1.0"
ctor = "0.1.21"
